--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.4"
 services:
 
   db:
-    container_name: yatest-docker
+    container_name: yatest-db
     image: postgres:13-alpine
     restart: unless-stopped
     ports:
