--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   db:
     container_name: yatest-db
-    image: postgres:13-alpine
+    image: postgres:14.3
     restart: unless-stopped
     ports:
       - 5444:5432
@@ -11,7 +11,6 @@ services:
       POSTGRES_DB: yatest
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: 111
-    command: --init-file ./src/main/resources/database/initDB.sql
     volumes:
       - ./src/main/resources/database/initDB.sql
       - ./db/data:/var/lib/postgresql/data
@@ -26,11 +25,12 @@ services:
 #        limits:
 #          cpus: '1'
 
-  ya-test:
+  service:
+    container_name: yatest-service
     build: ./
     restart: unless-stopped
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/yatest
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/yatest?stringtype=unspecified
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: 111
     ports:
