--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     username: admin
     password: 111
   jpa:
+    show-sql: true
     database: postgresql
     hibernate:
       ddl-auto: none
