--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
-  port: 8090
-#  address: 0.0.0.0
+  port: 80
+  address: 0.0.0.0
 
 spring:
   datasource:
@@ -8,7 +8,7 @@ spring:
     initialization-mode: ALWAYS
     schema: classpath*:database/initDB.sql
    # data: classpath*:database/populateDB.sql
-    url: jdbc:postgresql://localhost:5432/yatest?stringtype=unspecified
+    url: jdbc:postgresql://localhost:5444/yatest?stringtype=unspecified
     username: admin
     password: 111
   jpa:
